Fix overflow of Commanders name

--- a/client/src/app/duel-weeks/game.component.css
+++ b/client/src/app/duel-weeks/game.component.css
@@ -20,6 +20,7 @@
 .game-card .team-name {
   display: inline-block;
   overflow: hidden;
+  max-width: 180px;
   text-overflow: ellipsis;
   vertical-align: top;
   white-space: nowrap;
